Horizontal scroll fix

--- a/components/OurServices/OurServices.module.css
+++ b/components/OurServices/OurServices.module.css
@@ -1,6 +1,6 @@
-.OSwrapper:global {
+/* .OSwrapper:global {
     @apply max-w-[1140px] !important;
-}
-.ourServicesImgWapper:global {
+} */
+/* .ourServicesImgWapper:global {
    @apply  ms:max-h-[45%] !important;
-}
+} */
